--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -10,12 +10,19 @@
 .ec-bigbox-detail {
   padding-left: 7%;
   max-height: 600px;
-  padding-right: 7%;
+  // padding-right: 7%;
+}
+.neon-detail-config {
+  padding: 0 !important;
 }
 .ec-top-row-detail {
   height: 45%;
 }
-
+.list-dessins-th {
+  font-family: Mukta-Bold, sans-serif !important;
+  font-size: 17px !important;
+  margin-bottom: 15px !important;
+}
 .ec-top-layer {
   height: 584px;  margin: 2em;
   width: 60%;
@@ -32,6 +39,7 @@
 
 .ec-bottom-row {
   margin-top: 5%;
+  padding-right: 7%;
 }
 
 .ec-petit-prince {
@@ -48,8 +56,8 @@
   overflow-y: scroll;
   max-height: 450px;
   height: 80%;
-  padding-left: 2.5%;
-  padding-right: 2.5%;
+  // padding-left: 2.5%;
+  // padding-right: 2.5%;
   padding-top: 2%;
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
 }
@@ -57,6 +65,7 @@
 .ec-list-title {
   display: flex;
   margin-bottom: 2.5%;
+  margin-left: 1px;
   align-self: center;
 }
 .ec-list-title h2 {
@@ -88,7 +97,7 @@ h2 {
   z-index: 0;
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 
@@ -118,8 +127,9 @@ h2 {
   margin: 30px auto;
   width: 30%;
   display: flex;
-  height: 200px;
-  border-radius: 10px;
+  border: none !important;
+  height: 250px;
+    border-radius: 10px;
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
   transition: 0.4s;
   flex-direction: row;
@@ -127,9 +137,11 @@ h2 {
 
 .little-card {
   margin: 30px auto;
+  margin-left: 0;
+  margin-right: 0;
   width: 20%;
   display: flex;
-  height: 250px;
+  min-height: 275px;
   border-radius: 10px;
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
   transition: 0.4s;
@@ -141,7 +153,7 @@ h2 {
 }
 
 .card .card_image {
-  width: inherit;
+  width: 20%;
   // background-color: lightgray;
   height: 35%;
   align-self: center;
@@ -226,9 +238,10 @@ tbody tr:hover {
 td, th { 
 padding: 10px; 
   text-align: left;
-  width: 100%;
   cursor: pointer;
-  font-family: Mukta-Bold, sans-serif;
+  font-family: Mukta-Regular, sans-serif;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 th {
@@ -317,7 +330,7 @@ td:before {
 .ec-card-descr {
   font-family: Mukta-Regular, sans-serif;
   font-size: 14px;
-  overflow-y: scroll;
+  // overflow-y: scroll;
 
   color: #000b31;
 
@@ -405,8 +418,8 @@ box-shadow: 5pxs 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.
     background-color: white;
 }
 .no-dt {
-  color: #000B31;
-  font-size: 2vw;
+  color: white;
+  font-size: 17px;
   align-self: center;
   text-align: center;
   font-family: Nunito-Black, sans-serif;
@@ -564,11 +577,12 @@ form.checkout {
   margin-bottom: 15px;
 }
 .neon-canvas {
-    // height: 85%;
+    // height: 85%;7
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
     height: 100%;
   min-height: 350px;
     width: 100%;
-  margin-bottom: 15px;
     // background-image: url('../../assets/outer-space-neon.jpg');
     background-repeat:no-repeat;
     display: flex;
@@ -655,9 +669,14 @@ margin-bottom: 15px;
 .ec-bigbox-detail th, .ec-bigbox-detail td {
   padding-bottom: 4% ;
   padding-top: 4%;
+  padding-left: 5%;
+  padding-right: 5%;  
   font-size: 17px;
 }
+.ec-bigbox-detail table {
+  width: 100%;
 
+}
 .ec-bigbox-detail tr {
   border-bottom: 1px solid #D5D5D5;
 
@@ -895,13 +914,7 @@ margin-bottom: 15px;
 .revenir {
 left: 0;
  }
-.next-btn {
-  margin-bottom: 10px;
-  margin-top: 10px;
-}
-.prev-btn {
-  margin-bottom: 10px;
-}
+
 
 .card .card_image {
   width: 30%;
@@ -955,13 +968,30 @@ left: 0;
   .neon-bar-item-cont {
     height: 22%;
   }
+  .next-btn {
+
+    font-size: 11px;
+  }
+  .prev-btn {
+    font-size: 11px;
+  
+  }
  }
 
 @media screen and (max-width: 1024px) {
   .neon-bar-item-cont span {
     font-size: 12px;
   }
+  .next-btn {
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 11px;
+  }
+  .prev-btn {
+    margin-bottom: 10px;
+    font-size: 11px;
   
+  }
   .ec-petit-prince{
     display: none;
   };
