--- a/src/styles.scss
+++ b/src/styles.scss
@@ -97,8 +97,8 @@
         background-color: #f4cc20;
         outline: none !important;
         border: none;
-        font-size: 1rem;
-        font-family: Mukta-Bold, sans-serif;
+        font-size: 13px;
+                font-family: Mukta-Bold, sans-serif;
         cursor: pointer;
         align-self: flex-end;
         padding: 10px;
@@ -109,6 +109,7 @@
         border-radius: 45px;
         box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
         transition: all 0.3s ease 0s;
+        max-height: 44px;
 }
 
 .prev-btn {
@@ -120,10 +121,11 @@
     padding: 10px;
     padding-left: 15px;
     padding-right: 15px;
+    max-height: 44px;
 
-    border: 1.2px solid  #f4cc20;
-    font-size: 1rem;
-    font-family: Mukta-Bold, sans-serif;
+    border: 2px solid  #f4cc20;
+    font-size: 13px;
+        font-family: Mukta-Bold, sans-serif;
     cursor: pointer;
     letter-spacing: 0.4px;
     align-self: flex-end;
