--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -26,8 +26,8 @@
           <tbody>
             <tr *ngFor="let command of neonList; let i = index" (click)="goToNeonDetail(command)">
               <!--              [className]="command.typo + ' dynamicNeonTitle ' + getColor(command.colors) "-->
-              <td class="pb3 pt3" data-column="Texte">{{command.text}}</td>
-              <td data-column="Etat">{{command.state}}</td>
+              <td class="pb3 pt3" data-column="Texte">{{command.text | titlecase}}</td>
+              <td data-column="Etat">{{command.state | titlecase}}</td>
             </tr>
 
 
@@ -183,26 +183,26 @@
         <tbody>
           <tr>
             <td style="font-family: Mukta-Bold;" data-column="">Texte</td>
-            <td style="font-family: Mukta-Regular; text-align: center;" data-column="Etat">{{neonSelected?.text}}</td>
+            <td style="font-family: Mukta-Regular; text-align: center;" data-column="Etat">{{neonSelected?.text | titlecase}}</td>
 
             <!-- <td  [className]="neonSelected.typo + ' dynamicNeonTitle ' + colorsList[neonSelected.colors] " style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.text}}</td> -->
           </tr>
           <tr>
             <td style="font-family: Mukta-Bold;" data-column="">Typographie</td>
-            <td style="font-family: Mukta-Regular; text-align: center;" data-column="Etat">{{neonSelected?.typo}}</td>
+            <td style="font-family: Mukta-Regular; text-align: center;" data-column="Etat">{{neonSelected?.typo | titlecase}}</td>
           </tr>
           <tr>
             <td style="font-family: Mukta-Bold;" data-column="">Couleurs</td>
-            <td style="font-family: Mukta-Regular; text-align: center;" data-column="Etat">{{neonSelected?.colors}}</td>
+            <td style="font-family: Mukta-Regular; text-align: center;" data-column="Etat">{{neonSelected?.colors | titlecase}}</td>
           </tr>
           <tr>
             <td style="font-family: Mukta-Bold;" data-column="">Hauteur</td>
             <td style="font-family: Mukta-Regular; text-align: center;" data-column="Etat">{{neonSelected?.height}}cm</td>
           </tr>
-          <tr>
+          <!-- <tr>
             <td style="font-family: Mukta-Bold;" data-column="">Etat</td>
-            <td style="font-family: Mukta-Regular; text-align: center;" data-column="Etat">{{neonSelected?.state}}</td>
-          </tr>
+            <td style="font-family: Mukta-Regular; text-align: center;" data-column="Etat">{{neonSelected?.state | titlecase}}</td>
+          </tr> -->
           <tr *ngIf="neonSelected.state !== 'created'" >
             <td  >
               <div >
@@ -238,15 +238,17 @@
         </tbody>
       </table>
 
-      <div  *ngIf="neonSelected.state !== 'created' || neonSelected.state === 'payé'"  class="neon-tarif-cont">
+      <div    class="neon-tarif-cont">
         <div class="neon-tarif">
-          <span class="neon-tarif-price">Tarif: {{neonSelected?.price}} €</span>
-          <span class="neon-tarif-blabla">Livraison incluse </span>
+          <span *ngIf="neonSelected.state !== 'created' || neonSelected.state === 'payé'" class="neon-tarif-price">Tarif: {{neonSelected?.price}} €</span>
+          <span *ngIf="neonSelected.state === 'created'" style="font-size: 17px;" class="neon-tarif-price">Tarif en cours de calcul</span>
+          <span  class="neon-tarif-blabla">Livraison incluse </span>
 
         </div>
         <button *ngIf="neonSelected.state !== 'created' && neonSelected.state !== 'payé'" (click)="openCommand();"
           style="margin-right: 5%;" class="next-btn">Commander</button>
-
+          <button *ngIf="neonSelected.state === 'created'" disabled
+          style="margin-right: 5%;" class="grey-btn">Commander</button>
       </div>
     </div>
 
@@ -319,7 +321,7 @@
         <div class="card_content">
           <div [style.backgroundImage]="'url('+ '../.././assets/Icon-livre-sous-quinze-jours-10.png' +')'" class="card-logo"></div>
 
-          <span class="ec-card-title">
+          <span style="font-size: 17px;" class="ec-card-title">
             Livré sous 15 jours
 
           </span>
