--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,9 +107,29 @@
         letter-spacing: 0.4px;
         border: none;
         border-radius: 45px;
-        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
         transition: all 0.3s ease 0s;
-        max-height: 44px;
+        max-height: 50px;
+}
+
+.grey-btn {
+  border-radius: 25px;
+  color: rgba(0, 0, 0, 0.6);
+  // opacity: .7;;
+  background-color: #b1b1b1;
+  outline: none !important;
+  border: none;
+  font-size: 13px;
+          font-family: Mukta-Bold, sans-serif;
+  cursor: auto;
+  align-self: flex-end;
+  padding: 10px;
+  padding-left: 25px;
+  padding-right: 25px;  
+  letter-spacing: 0.4px;
+  border: none;
+  border-radius: 45px;
+  transition: all 0.3s ease 0s;
+  max-height: 50px;
 }
 
 .prev-btn {
@@ -121,7 +141,7 @@
     padding: 10px;
     padding-left: 15px;
     padding-right: 15px;
-    max-height: 44px;
+    max-height: 50px;
 
     border: 2px solid  #f4cc20;
     font-size: 13px;
@@ -130,7 +150,6 @@
     letter-spacing: 0.4px;
     align-self: flex-end;
     border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s; 
 }
 
