--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -708,7 +708,7 @@
         class="neon-canvas2"></div>
         <div class="merci-cont">
           <h1  class='remerciements'>Commande validée !</h1>
-          <span class='merci-descr'>Merci pour votre commande, un email de confirmation vous à été envoyée. Vous recevrez votre néon à l'adresse indiqué dans les 20 prochains jours. Envoyez nous une photo</span>
+          <span class='merci-descr'>Merci pour votre commande, un email de confirmation vous à été envoyée. Vous recevrez votre néon à l'adresse indiqué dans les 20 prochains jours. Envoyez nous une photo !</span>
           <button  (click)="resetView();"
           class="next-btn revenir">Retour à mon espace</button>
         </div>
