--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -48,7 +48,6 @@
 }
 
 .ec-petit-prince {
-  // background-color: lightgray;
   height: 90%;
 }
 
@@ -56,7 +55,7 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  justify-content: flex-start   ;
+  justify-content: flex-start;
   border-radius: 7px;
   overflow-y: scroll;
   max-height: 450px;
@@ -69,12 +68,16 @@
 
 .ec-list-title {
   display: flex;
-  margin-bottom: 2.5%;
-  margin-left: 1px;
+  //margin-bottom: 2.5%;
+  margin: 0 ;
+  padding: 0 !important;
+  //margin-left: 1px;
   align-self: center;
+  margin-bottom: 2.5%;
 }
 .ec-list-title h2 {
-  margin-right: 5%;
+  margin: 0;
+  padding: 0;
 }
 .tailleperso {
   font-family: Nunito-Regular, sans-serif;
@@ -331,7 +334,6 @@ td:before {
 
 .ec-title {
         font-family: Nunito-Black, sans-serif;
-  font-size: 1.5rem;
   color: #000b31;
   align-self: center;
 }
@@ -826,8 +828,8 @@ margin-bottom: 15px;
   width: 100%;
 }
 
-.livraisonDom{     align-self: center;
-
+.livraisonDom{
+  align-self: center;
   font-family: Mukta-Bold, sans-serif;
   font-size: 17px;}
 
