--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -252,15 +252,10 @@
     </div>
 
   </div>
-  <div class="ec-bottom-row row">
+  <div class="ec-bottom-row row pd7">
     <h1 class="ec-title">Un service sûr et complet</h1>
-
     <div class="cards-list">
-
       <div class="little-card  card-tarace 1">
-        <!-- <div class="card_image">
-    
-           </div> -->
         <div class="card_content">
           <div [style.backgroundImage]="'url('+ '../.././assets/Icon-paiement-securise-12.png' +')'" class="card-logo"></div>
           <span class="ec-card-title">
@@ -280,10 +275,8 @@
            </div> -->
         <div class="card_content">
           <div [style.backgroundImage]="'url('+ '../.././assets/Icon-garantie-13.png' +')'" class="card-logo"></div>
-
           <span class="ec-card-title">
             Garantie un an
-
           </span>
           <span class="ec-card-descr">
             Tous nos néons posèdent une garantie d'un an à compter de la data d'achat. Vous devez retourner un article
