--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -39,12 +39,16 @@
 
 .ec-bottom-row {
   margin-top: 5%;
-  padding-right: 7%;
+  //padding-right: 7%;
 }
 .ec-bottom-row-blue {
   margin-top: 5%;
-  padding-right: 7%;
+  //padding-right: 7%;
   background-color: #000b31;
+}
+
+.pd7 {
+  padding-right: 7%;
 }
 
 .ec-petit-prince {
