--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -91,19 +91,26 @@ margin-bottom: 15px;
 
 .basic-input-form:before {
   height: auto;
+
+  border-radius: 25px;
+  outline: none !important;
+  border: none;
+  font-size: 13px;
+  font-family: Mukta-Bold, sans-serif;
+  cursor: pointer;
+  align-self: flex-end;
+  padding: 10px;
   padding-left: 30px;
   padding-right: 30px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  letter-spacing: 0.4px;
+  transition: all 0.3s ease 0s;
+  max-height: 50px;
   float: right;
-  border-radius: 25px;
   background-color: #000b31;
   color: white;
   content: 'Importer';
   /* background: white; */
-  border: 1px solid #000;
   text-align: center;
-  font-family: Nunito-Black, sans-serif;
 }
 
 .basic-input-form::-webkit-file-upload-button {
