--- a/src/app/neon-form/neon-form.component.html
+++ b/src/app/neon-form/neon-form.component.html
@@ -242,10 +242,8 @@
             <span class="user-info-row-title">Mot de passe</span>
             <input autocomplete="off" type="password" (change)="onChangeUserInfo('password', $event.target.value)"
               [value]="userInfoPerso['password'] || ''" class="basic-input smallHeight mb3 " />
-            <span class='user-info-row-title textcenter'>En cliquant sur "envoyer" vous acceptez les <a
-                href="#">Conditions g énérales d'utilisation</a></span>
-
-
+            <span class='user-info-row-title textcenter'>En cliquant sur "Envoyer" vous acceptez les <a
+                href="#">Conditions générales d'utilisation</a></span>
           </div>
           <div class="neon-wizard-btn-container row">
             <button class="prev-btn  col-md-3 col-sm-12" type="button" awPreviousStep>Précedent</button>
