--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -736,8 +736,7 @@ margin-bottom: 15px;
   display: flex;
   flex-direction: column;
   color: #000b31;
-  margin-left: 5%;
-}
+  margin-left: 10%;}
 
 .neon-tarif-price {
   font-size: 24px;
@@ -1203,7 +1202,7 @@ svg {
   }
 }
 
-label { font-size: 24px; }
+label { font-size: 17px; }
 
 
 /*** custom checkboxes ***/
