--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14790,3 +14790,6 @@ html {
   }
 }
 /*# sourceMappingURL=bootstrap-grid.css.map */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
