--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="neonSelected === 'none'" class="row   ">
     <div class='admin-list-title col-12'>
       <h3 class="admin-title">Vue Globale: {{numOfCommands}} demandes dont {{numOfCreated}} en attente , {{numOfDT}} traitées, {{numOfPayes}} payées</h3>
-      <a (click)="exportAsXLSX()" href="#" class="buttonDownload">Generer fichier excel</a>
-      <button (click)="openStats()"  style="padding-right: 30px; padding-left: 30px;" class="next-btn">Statistiques</button>
+      <a (click)="exportAsXLSX()" href="#" class="buttonDownload">Bicrave Excel</a>
+      <button (click)="openStats()"  style="padding-right: 30px; padding-left: 30px;" class="next-btn">Stats et biff</button>
 
     </div>
 
