--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -565,22 +565,19 @@ background-color: #000B31;
 align-self: center;
 /* position: absolute; */
 text-align: center;
-padding-top: 0.5%;
 background-color: white;
-margin-right: 1%;
   // width: 49%;
 outline: none !important;
 /* height: 168px; */
 font-size: 3vw;
-  padding-bottom: 1%;
 /* padding-bottom: 1%; */
 display: -webkit-box;
 display: flex;
 /* top: 10%; */
 border-radius: 15px;
+  padding-left: 5%;
+  padding-right: 5%;
 // height: 100px;
-padding-top: 10px;
-padding-bottom: 10px;
 }
 
 
@@ -1181,3 +1178,7 @@ float: left;
 }
 
 }
+
+
+
+
